static/disc.css
/* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/nature/nat-7/nat642.cur), progress;} /* End http://www.cursors-4u.com */

{% load staticfiles %}

{% load staticfiles %}
<img src="{% static "head.jpg" %}">

.jumbotron h1 {
    color: #0099FF;
    font-style: italic;
    font-family: "Trebuchet MS", Helvetica;

}

.jumbotron header {

    max-width: 100%;
    height: auto;

}

.jumbotron {

    background-image: url("head.JPG");
    background-color: #CEBBF2;
    background-size: 100%;
    background-repeat: no-repeat;
}

body {
   background-attachment:fixed;
    padding-top:50px;
   background: url('wave.png');
   background-size:100%;
   background-repeat: no-repeat;
}
.header span {
    transition: 500ms ease-in;
}
h1 {
    font-family:'Audiowide';
    font-style: italic;
    font-size: 59px;
   # 75D9AD
  # ACDE7C
    #color:#19D1FF;
    color:#A375FF;
}
.header span:hover {

    color: #99FF66;
}

.navbar-default {
    border-color: transparent;
    #background: radial-gradient(closest-corner at 75% 40% , rgb(255, 255, 0), #rgb(117, 217, 173)) repeat scroll 0% 0% transparent;
    background: radial-gradient(closest-corner at 75% 40%, #A375FF, #19D1FF);
}

.navbar-default .navbar-nav > li > a {
    color: black;
font-family: 'VT323';
font-size: 1.3em;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
    color: yellow;
    background-color: #75D9AD;
}

.navbar-default .navbar-brand {
    font-family: 'Monofett';
    font-size: 2.4em;
    color: #DA70D6;
}

